kubernetes/app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: helidon-nima-examples
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: helidon-nima-examples
  template:
    metadata:
      labels:
        app: helidon-nima-examples
        version: v1
    spec:
      volumes:
        - name: wallet
          configMap:
            name: wallet
      containers:
        - name: helidon-nima-examples
          image: ghcr.io/oracle-japan/java-on-azure-day-2023/helidon-nima-examples:1.0.0
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: api
            initialDelaySeconds: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: api
            initialDelaySeconds: 30
            periodSeconds: 5
          volumeMounts:
            - mountPath: /var/cache
              name: wallet
              readOnly: true
      imagePullSecrets:
        - name: ghcr-secret
