kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.azure.shukawam.me
      http:
        paths:
          - backend:
              service:
                name: helidon-nima-examples
                port:
                  number: 8080
            path: /
            pathType: Prefix
